Table Admin {
  id number [primary key]
  email string [unique]
  password string
  createdAt date
  updatedAt  date
}

Table User {
  id number [primary key]
  email password [unique]
  password string
  name string
  address string
  telephoneNumber string [unique]
  createdAt date
  updatedAt date
}

Table Product {
  id number [primary key]
  name string
  description string
  like number
  sold number
  stock number
  rate number
  category enum
  createdAt number 
  updatedAt number
}

Table ProductMedia {
  id number [primary key]
  idProduct number
  url string
  publicId string
  createdAt date
  updatedAt date
}

Table Review {
  id number
  userId number 
  productId number
  rate number
  reviews string
  createdAt date
  updatedAt date
} 

Table Bucket {
  id number [primary key]
  userId number
  productId number
  quantity number
  createdAt date 
  updatedAt date
}

Table Transaction {
  id number [primary key]
  userId number
  productId number
  quantity number
  address number
  total number
  status enum (Approved,Denied)
  createdAt date
  updatedAt date
}

Ref: Product.id < Transaction.productId
Ref: User.id < Transaction.userId
Ref: Product.id < Bucket.productId
Ref: User.id < Bucket.userId
Ref: Product.id < Review.productId 
Ref: User.id < Review.userId
Ref: Product.id < ProductMedia.idProduct